subprojects {
    /* Shared plugins between all modules */
    apply plugin: 'java'

    /* Shared repositories between all modules */
    repositories {
        mavenCentral()
    }

    java {
        withSourcesJar()
        sourceCompatibility = JavaVersion.VERSION_1_8
        targetCompatibility = JavaVersion.VERSION_1_8
    }
}
